# redactru

./: .gitignore  LICENSE  README.md  pyproject.toml  redactru_run.ps1  requirements-gpu.txt  requirements.txt
examples/: ambiguous_corpus_ru.txt  ambiguous_narrative_ru.txt
examples_out/run1/: candidates.json  candidates_raw.json  candidates_review.csv  mapping.json  out.txt  report.json
examples_out/run2/: candidates.json  candidates_raw.json  candidates_review.csv  mapping.json  out.txt  report.json
schemas/: candidates.schema.json  report.schema.json
src/cli/: anonymize_hybrid.py
src/hybrid/: aggregator.py  dictionaries.py  ner_stanza.py  normalizers.py  profiles.py  regex_min.py  resolver.py
src/redactru/: __init__.py  apply.py  cli.py  detect.py  validate.py
src/redactru/nlp/: morph.py
src/redactru/rules/: regex_ru.py
src/redactru/util/: phones.py  snils.py  spans.py  tokens.py
tests/: test_detect_smoke.py  test_hybrid_ner.py  test_morph.py  test_phones.py  test_pipeline_e2e.py  test_regex_ru.py  test_snils.py  test_spans.py  test_validate.py
